OO-622,CL-225: remove username from GUI in place where is not really needed and students can see it. Mark others place with //TODO username where it need more works and/or the username is only visible by author/coach/admin... Additional fix the setup sql for MySQL (index too long).